manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: code-server
  namespace: default
  annotations:
    nginx.org/websocket-services: "code-server"
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.org/server-snippets: |
      location / {
        proxy_pass http://your-host:80/;
        proxy_set_header Host $host;
        proxy_set_header Upgrade $http_upgrade;
        proxy_set_header Connection upgrade;
        proxy_set_header Accept-Encoding gzip;
      }
spec:
  ingressClassName: nginx
  rules:
    - host: your-host
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: code-server
                port:
                  number: 80
